--- a/src/app/pages/form-creator/form-creator.component.less
+++ b/src/app/pages/form-creator/form-creator.component.less
@@ -16,11 +16,4 @@ nz-steps {
   width: @width-full;
   height: auto;
   margin: auto;
-  padding: clamp(@spacing16, 2vw, @spacing32);
 }
-
-.form-page-container {
-  padding-left: clamp(@spacing16, 2vw, @spacing32);
-  padding-right: clamp(@spacing16, 2vw, @spacing32);
-}
-
