--- a/src/app/pages/form-creator/info-page/info-page.component.less
+++ b/src/app/pages/form-creator/info-page/info-page.component.less
@@ -7,7 +7,7 @@ nz-layout {
   background-color: @transparent;
   display: flex;
   flex-direction: column;
-  padding: clamp(@spacing8, 2vw, @spacing16) clamp(@spacing16, 4vw, @spacing32);
+  padding: clamp(@spacing8, 2vw, @spacing16) clamp(@spacing16, 5vw, @spacing32);
 }
 
 .formelement {
