--- a/src/app/pages/form-creator/results-page/results-page.component.less
+++ b/src/app/pages/form-creator/results-page/results-page.component.less
@@ -14,7 +14,7 @@ nz-layout {
   display: flex;
   width: 100%;
   max-width: 100%;
-  padding: clamp(@spacing8, 2vw, @spacing24) clamp(@spacing12, 4vw, @spacing24);
+  padding: clamp(@spacing8, 2vw, @spacing24) clamp(@spacing16, 5vw, @spacing32);
 }
 
 .formelement {
